[tool.poetry]
name = "nornir_librenms"
version = "0.1.0"
description = "LibreNMS inventory plugin for Nornir"
authors = ["Shereif ElHamalawy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

